# tweakwcs

./: .bandit.yaml  .coveragerc  .flake8  .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  azure-pipelines.yml  azure-templates.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: .rtd-environment.yml  LICENSE.rst  Makefile  conf.py  index.rst  make.bat  rtd-pip-requirements  rtd-pip-requirements.txt
docs/_static/css/: custom-tweakwcs.css  custom.css
docs/exts/: numfig.py
docs/source/: conf.py  correctors.rst  imalign.rst  index.rst  linalg.rst  linearfit.rst  matchutils.rst  wcsimage.rst  wcsutils.rst
docs/tweakwcs/: groupwcs.rst  linearfit.rst  tpwcs.rst  wcsimage.rst
notebooks/: align_fits_wcs.ipynb
src/: carrutils.c
tweakwcs/: __init__.py  correctors.py  groupwcs.py  imalign.py  linalg.py  linearfit.py  matchutils.py  multivariate.py  tpwcs.py  wcsimage.py  wcsutils.py
tweakwcs/tests/: conftest.py  coveragerc  helper_correctors.py  helper_tpwcs.py  test_correctors.py  test_imalign.py  test_jwst_utils.py  test_linalg.py  test_linearfit.py  test_matchutils.py  test_multichip_fitswcs.py  test_multichip_jwst.py  test_multivariate.py  test_nop.py  test_tpwcs.py  test_wcsimage.py  test_wcsutils.py
tweakwcs/tests/data/: convex_hull_proximity.cat  sparse-2dhist.fits
tweakwcs/utils/: __init__.py  jwst_utils.py
