[project]
name = "tweakwcs"
description = "A package for correcting alignment errors in WCS objects"
requires-python = ">=3.10"
authors = [
    { name = "Mihai Cara", email = "help@stsci.edu" },
]
dependencies = [
    "numpy",
    "astropy>=5.0.4",
    "gwcs>=0.14.0",
    "stsci.stimage",
    "stsci.imagestats",
    "spherical_geometry>=1.2.20",
    "packaging>=21.1",
]
dynamic = [
    "version",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/spacetelescope/tweakwcs"
"Bug Tracker" = "https://github.com/spacetelescope/tweakwcs/issues"
Documentation = "http://spacetelescope.github.io/tweakwcs/"
"Source Code" = "https://github.com/spacetelescope/tweakwcs"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "scipy",
]
docs = [
    "tomli; python_version<'3.11'",
    "numpydoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "stsci-rtd-theme",
    "graphviz",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.6",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = [
    "LICENSE.rst",
]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "notebooks/*.ipynb",
]
tweakwcs = [
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.rst",
]
"tweakwcs.tests.data" = [
    "tweakwcs/tests/data/*",
]

[tool.setuptools_scm]
write_to = "tweakwcs/_version.py"

[tool.build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = "1"

[tool.distutils.upload_docs]
upload-dir = "docs/_build/html"
show-response = 1

[tool.pytest.ini_options]
minversion = "4.6"
norecursedirs = [
    "build",
    "docs/_build",
    ".tox",
]
doctest_plus = "enabled"
addopts = "--ignore=build"

[tool.coverage.run]
omit = [
    "tweakwcs/_version.py",
    "tweakwcs/tests/*.py",
    "*/tweakwcs/tests/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
]
