[metadata]
package_name = tweakwcs
description = A package for correcting alignment errors in WCS objects
long_description = README.rst
author = Mihai Cara
author_email = help@stsci.edu
license = BSD-3-Clause
version-date = 08-May-2019
version = 0.5.1
edit_on_github = False
github_project = spacetelescope/tweakwcs
description-file = README.rst
url = https://github.com/spacetelescope/tweakwcs
homepage = https://github.com/spacetelescope/tweakwcs

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[flake8]
count = True
doctests = True
show_source = True
statistics = True
exclude =
    .git,
    __pycache__,
    doc/source/conf.py,
    build,
    dist,
    relic
ignore =
    E501,
    E402,
    F403,
    W504

[tool:pytest]
minversion = 2.2
addopts = --ignore=build
norecursedirs = build docs/_build relic

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0
